--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 *.so
 
 # Distribution / packaging
+.idea/
 .Python
 build/
 develop-eggs/
@@ -26,6 +27,10 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+*.sqlite3
+migrations/
+staticfiles/
+media/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -109,6 +114,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+sms_system_venv/
 
 # Spyder project settings
 .spyderproject
