--- a/requirements.txt
+++ b/requirements.txt
@@ -18,13 +18,16 @@ idna==2.8
 ipaddr==2.2.0
 lockfile==0.12.2
 msgpack==0.6.2
+numpy==1.19.1
 packaging==20.3
+pandas==1.1.0
 pep517==0.8.2
 Pillow==7.1.1
 progress==1.5
 psycopg2==2.8.5
 psycopg2-binary==2.8.5
 pyparsing==2.4.6
+python-dateutil==2.8.1
 python-decouple==3.3
 pytoml==0.1.21
 pytz==2019.3
